knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcareProviderSpecialty/HealthcareProviderSpecialty.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>