knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcareProviderSpecialty/fields/Board_Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Board_Certification_Status__c</fullName>
    <label>Board Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Not Certified</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>