knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcareProviderSpecialty/fields/Primary_Board_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Primary_Board_Specialty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Board Specialty</label>
    <type>Checkbox</type>
</CustomField>