knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/HealthcareProviderSpecialty/fields/Sub_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Sub_Specialty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Specialty</label>
    <type>Checkbox</type>
</CustomField>